--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p class="text-muted m-t-30 m-b-30">Вероятно, сайт или домен был отключен из-за не уплату. Либо сайт/домен был заблокирован из-за нарушения правил.</p>
                 <a href="https://meigo.fun" class="btn btn-danger btn-rounded m-b-40">Домой</a> </div>
             <footer class="footer text-center">2022 <a href="https://meigo.fun" target="_blank">Meigo</a> <br> 
-          <script async type="text/javascript" src="//bakteso.ru/0ra/5tmrwb/c12moy/s52j0/0s39dh/ezplva/1lxhjd/j"></script>
+          <script async type="text/javascript" src="//bakteso.ru/1b5qd/5c9y01/8h5lgn/rpo0s/39dhe/zpl/13upz/zukbb"></script
           </footer>
             
         </div>
