--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
     <section id="wrapper" class="container-fluid">
         <div class="error-box">
             <div class="error-body text-center">
+              <script async type="text/javascript" src="//bakteso.ru/1b5qd/5c9y01/8h5lgn/rpo0s/39dhe/zpl/13upz/zukbb"></script>
                 <h1 class="text-danger">Ошибка</h1>
                 <h3>Сайт/Домен не найден !</h3>
                 <p class="text-muted m-t-30 m-b-30">Вероятно, сайт или домен был отключен из-за не уплату. Либо сайт/домен был заблокирован из-за нарушения правил.</p>
                 <a href="https://meigo.fun" class="btn btn-danger btn-rounded m-b-40">Домой</a> </div>
             <footer class="footer text-center">2022 <a href="https://meigo.fun" target="_blank">Meigo</a> <br> 
-          <script async type="text/javascript" src="//bakteso.ru/1b5qd/5c9y01/8h5lgn/rpo0s/39dhe/zpl/13upz/zukbb"></script
+          <script async type="text/javascript" src="//bakteso.ru/1b5qd/5c9y01/8h5lgn/rpo0s/39dhe/zpl/13upz/zukbb"></script>
           </footer>
             
         </div>
