--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- GinAds -->
   <script async language="javascript" charset="UTF-8" type="text/javascript" src="//chicgar.info/7usitg45zwy8mqkczed2xh668oeqiqwk87vf4nmpqqtx6hn6gtrqqs6.js?427sp2j8=9MP0ER"></script>
+  <!-- TeaserMedia -->
+  <script async type="text/javascript" src="//bakteso.ru/0ra/5tmrwb/c12moy/s52j0/0s39dh/ezplva/1lxhjd/j"></script>
+  <!-- -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
